--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="#"><img src="images/logo.png" /></a>
+			  <a class="navbar-brand" href="index.html"><img src="images/logo.png" /></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			 
 			  <ul class="nav navbar-nav navbar-right">
-				<li><a href="#">About us</a></li>
+				<li><a href="about_us.html">About us</a></li>
 				<li class="dropdown yamm-fw">
 				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Service<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
