--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ You can also track your order and choose from a number of online payment options
 					<div class="s-inner">
 						<div class="r-block"><a href="#"><img src="images/managed.png" /></a></div>
 						<div class="s-name">
-							<a href="#">Managed<br /> Services</a>
+							<a href="service_ms.html">Managed<br /> Services</a>
 						</div>
 					</div>
 				</div>
