--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ You can also track your order and choose from a number of online payment options
 				<h2>Services</h2>
 				<div class="col-sm-3">
 					<div class="s-inner">
-						<div class="r-block"><a href="#"><img src="images/managed.png" /></a></div>
+						<div class="r-block"><a href="service_ms.html"><img src="images/managed.png" /></a></div>
 						<div class="s-name">
 							<a href="service_ms.html">Managed<br /> Services</a>
 						</div>
