--- a/about_us.html
+++ b/about_us.html
@@ -101,7 +101,7 @@
 					</li>
 				  </ul>
 				</li>
-				<li><a href="#">Success stories</a></li>
+				<li><a href="story.html">Success stories</a></li>
 				<li><a href="#">Login</a></li>
 				<li><a href="#">Contact Us</a></li>
 			  </ul>
