--- a/contacts.html
+++ b/contacts.html
@@ -109,75 +109,51 @@
 		  </div><!-- /.container-fluid -->
 		</nav>
 		</div>
-	<section class="banner banner-ms">
+	<section class="banner banner-contact">
 		<div class="banner-inner">
 			<div class="container">
-				<div class="col-sm-9 col-sm-offset-3">
-				<h1>Managed <br />Services</h1>
+				
+				<h1>Contact Us</h1>
+				<div class="row">
+					<div class="col-sm-3 pull-left c-info">
+						<p>Tech Partners, Co. LLC</p>
+						<p>5318 E. 2nd Street #661</p>
+						<p>Long Beach Ca | 90803</p>
+					</div>
+					<div class="col-sm-3 pull-right c-info">
+						<p>Tech Partners, Co. LLC</p>
+						<p>5318 E. 2nd Street #661</p>
+						<p>Long Beach Ca | 90803</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="service-inner">
-		<div class="container">
-			<div class="col-sm-3">
-				<div class="sidebar">
-					<h3>Managed Services</h3>
-					<ul>
-						<li><a href="#network">Network Assessment</a></li>
-						<li><a href="#backup">Back-Up Systems</a></li>
-						<li><a href="#sm">Network / Server Monitoring & Maintenance</a></li>
-						<li><a href="#it">IT Administration</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-sm-9">
-				<div class="s-content">
-					<h3 id="network">Network Assessment</h3>
-					<p>Network assessment services are vital for determining network infrastructure and its compliance to new technologies, applications and solutions:</p>
-					<p>
-					<ul>
-					<li>Specialists at The Tech Partners will run tools to survey your network and identify problems to improve system performance and reliability;</li>
-
-					<li>To boost your networks’ performance they need to be periodically checked up and updated. Comprehensive network assessments are done regularly to plan changes to eliminate possible problems, instead of reacting to them.</li></ul>
-					</p>
-					<!-- ///////////////////////////////////////////////////////////////////////////// -->
-					<h3 id="sm">Network / Server Monitoring <br />& Maintenance</h3>
-					<p>Experts at The Tech Partners will monitor your servers' performance, identify problems and fix them to keep your networks and servers up and running:</p>
-					<p>
-					<ul>
-					<li>Our specialists will use tools to update the monitored devices on your network and perform problem remediation and maintenance either remotely or on-site.</li>
-
-					<li>Tech Partners remediation and maintenance plans are designed to suit your individual business requirements and budgets.</li></ul>
-					</p>
-					<!-- ///////////////////////////////////////////////////////////////////////////// -->
-					<h3 id="backup">Back-Up Systems</h3>
-					<p>Effective data backup system is the guarantee that you avoid business interruption, as all the data worth saving is stored in backup files.
-The Tech Partners offer customized levels of Backups:</p>
-					<p>
-					<ul>
-					<li>Online backup with local support from Tech Partners (Los Angeles and Las Vegas areas).</li>
-
-					<li>Local backup</li>
-					<li>Specialized server / tape drive system</li>
-					</ul>
-					</p>
-					<!-- ///////////////////////////////////////////////////////////////////////////// -->
-					<h3 id="it">IT Administration</h3>
-					<p>The Tech Partners provide a full range of IT Administration services, included, but not limited to the following:</p>
-					<p>
-					<ul>
-					<li>Response Time Testing</li>
-
-					<li>Break/Fix</li>
-					<li>Supplemental / Vacation Staffing</li>
-					</ul>
-					</p>
-				</div>
-			</div>
-		</div>
-			
+	<section class="c-wrap">
 		
+		<div class="container form-wrap">
+		<div class="c-form">
+			<form>
+				<div class="form-group">
+					<input type="text" class="form-control" id="name" placeholder="Name">
+				</div>
+				<div class="form-group">
+					<input type="text" class="form-control" id="email" placeholder="E-mail">
+				</div>
+				<div class="form-group">
+					<input type="text" class="form-control" id="Number" placeholder="Number">
+				</div>
+				<div class="form-group white-group">
+					<textarea placeholder="Message"></textarea>
+					<button type="submit" class="btn btn-contact">Submit</button>
+				</div>
+			</form>
+			<div class="contact-shadow"></div>
+		</div>	
+		</div>
+		<div class="map">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7098.94326104394!2d78.0430654485247!3d27.172909818538997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1385710909804" width="600" height="450" frameborder="0" style="border:0"></iframe>
+		</div>
 	</section>
 	<section class="bottom">
 		<div class="footer">
