--- a/about_us.html
+++ b/about_us.html
@@ -103,7 +103,7 @@
 				</li>
 				<li><a href="story.html">Success stories</a></li>
 				<li><a href="#">Login</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><a href="contacts.html">Contact Us</a></li>
 			  </ul>
 			</div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
