--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ You can also track your order and choose from a number of online payment options
 					<div class="s-inner">
 						<div class="r-block"><a href="#"><img src="images/cloud.png" /></a></div>
 						<div class="s-name">
-							<a href="#">Cloud <br />Services</a>
+							<a href="service_cs.html">Cloud <br />Services</a>
 						</div>
 					</div>
 				</div>
@@ -260,7 +260,7 @@ You can also track your order and choose from a number of online payment options
 					<div class="s-inner">
 						<div class="r-block"><a href="#"><img src="images/it.png" /></a></div>
 						<div class="s-name">
-							<a href="#">Professional<br />IT Support</a>
+							<a href="service_pis.html">Professional<br />IT Support</a>
 						</div>
 					</div>
 				</div>
@@ -268,7 +268,7 @@ You can also track your order and choose from a number of online payment options
 					<div class="s-inner">
 						<div class="r-block"><a href="#"><img src="images/media.png" /></a></div>
 						<div class="s-name">
-							<a href="#">Media<br />& Entertainment</a>
+							<a href="service_me.html">Media<br />& Entertainment</a>
 						</div>
 					</div>
 				</div>
