--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			  <ul class="nav navbar-nav navbar-right">
 				<li><a href="about_us.html">About us</a></li>
 				<li class="dropdown yamm-fw">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Service<span class="caret"></span></a>
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Service<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
 					<li>
 						<div class="row">
@@ -182,7 +182,7 @@
 			</div>
 			</div>
 			<div class="col-sm-3">
-			<div class="column-inner">
+			<div class="column-inner last">
 				<h3>We Work for Your Convenience</h3>
 				<p>Our team of professionals will eagerly help your IT crew and fix any problems you might encounter with your networks, hardware or software.
 You can also track your order and choose from a number of online payment options.</p>
@@ -193,7 +193,7 @@ You can also track your order and choose from a number of online payment options
 			</div>
 		</div>
 		</div>
-		<!-- brand start -->
+		<!-- brand start --><div class="brand-wrap">
 		<div class="container">
 			<div class="row">
 			<div class="slider-wrap">
@@ -229,11 +229,13 @@ You can also track your order and choose from a number of online payment options
 						</li>
 						<!-- items mirrored twice, total of 12 -->
 					  </ul>
-					  <div class="shadow-l"></div>
-					  <div class="shadow-r"></div>
+					  
 					</div>
 			</div>
 			</div>
+		</div>
+		<div class="shadow-l"></div>
+		<div class="shadow-r"></div>
 		</div>
 	</section>	
 	<section class="service">
@@ -335,7 +337,7 @@ You can also track your order and choose from a number of online payment options
 	<script type="text/javascript" src="js/jquery.flexslider.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-	
+	<script src="js/bootstrap-hover-dropdown.js"></script>
 	<script src="js/script.js"></script>
   </body>
 </html>
