--- a/service_cs.html
+++ b/service_cs.html
@@ -44,7 +44,7 @@
 			  <ul class="nav navbar-nav navbar-right">
 				<li><a href="about_us.html">About us</a></li>
 				<li class="dropdown yamm-fw">
-				  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Service<span class="caret"></span></a>
+				  <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown">Service<span class="caret"></span></a>
 				  <ul class="dropdown-menu" role="menu">
 					<li>
 						<div class="row">
@@ -206,7 +206,7 @@ The main features of EC2 are:</p>
 	<script type="text/javascript" src="js/jquery.flexslider.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-	
+	<script src="js/bootstrap-hover-dropdown.js"></script>
 	<script src="js/script.js"></script>
   </body>
 </html>
